# PinDou

./: Perler-Gen_MVP_技术文档.md  README.md  main.py  pyproject.toml  requirements.txt  拼豆图片转换系统_愿景声明与范围定义.md
assets/palettes/: perler_basic.json
src/perler_gen/: __init__.py  cli.py  counts.py  export_assets.py  export_pdf.py  palette.py  preprocess.py  quantize.py  step_planner.py  utils.py
tests/: test_quantize_counts.py  test_step_planner.py
